--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
       <artifactId>spark-core_2.11</artifactId>
       <version>2.2.0</version>
     </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.2</version>
+    </dependency>
 
     <dependency>
       <groupId>org.apache.spark</groupId>
